finished css and some layout issues, finished contact me scene, added socialmedia icon component

--- a/public/output.css
+++ b/public/output.css
@@ -583,6 +583,10 @@ video {
   top: 0px;
 }
 
+.top-10{
+  top: 2.5rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -833,6 +837,14 @@ video {
   height: 100%;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
+.h-40{
+  height: 10rem;
+}
+
 .w-40{
   width: 10rem;
 }
@@ -889,6 +901,10 @@ video {
   resize: both;
 }
 
+.flex-row{
+  flex-direction: row;
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -933,6 +949,10 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -955,6 +975,11 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .p-3{
@@ -1037,6 +1062,22 @@ video {
   padding-right: 1.5rem;
 }
 
+.pr-0{
+  padding-right: 0px;
+}
+
+.pr-0\.5{
+  padding-right: 0.125rem;
+}
+
+.pl-0{
+  padding-left: 0px;
+}
+
+.pl-0\.5{
+  padding-left: 0.125rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1091,6 +1132,11 @@ video {
 .text-6xl{
   font-size: 3.75rem;
   line-height: 1;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold{
@@ -1198,6 +1244,11 @@ video {
 .text-grey{
   --tw-text-opacity: 1;
   color: rgb(231 245 245 / var(--tw-text-opacity));
+}
+
+.text-blue-300{
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
 }
 
 .no-underline{
@@ -1413,6 +1464,10 @@ body,
 
   .md\:ml-1{
     margin-left: 0.25rem;
+  }
+
+  .md\:mr-10{
+    margin-right: 2.5rem;
   }
 
   .md\:flex{
